--- a/trys/environment-py3.13-public-fail/environment.yml
+++ b/trys/environment-py3.13-public-fail/environment.yml
@@ -1,8 +1,8 @@
-name: vpin-test-py3.12
+name: vpin-test
 channels:
   - conda-forge
 dependencies:
-  - python=3.12
+  - python=3.13.5
   - numpy=2.3.1
   - scipy=1.16.0
   - matplotlib=3.10.3
