--- a/.gitignore
+++ b/.gitignore
@@ -79,12 +79,6 @@ ipython_config.py
 # pyenv
 .python-version
 
-# pipenv
-Pipfile.lock
-
-# poetry
-poetry.lock
-
 # pdm
 .pdm.toml
 
@@ -194,3 +188,4 @@ logs/
 .env.production.local 
 
 ./README.md
+_build/
